--- a/assignment2/assignment2-10.x_features-backport/tool/src/webapp/component-templates/GradeDetails.html
+++ b/assignment2/assignment2-10.x_features-backport/tool/src/webapp/component-templates/GradeDetails.html
@@ -11,7 +11,10 @@
         <table rsf:id="grade-details-table" class="itemSummary infoTable subsection1" cellspacing="0" summary="Grade Details">    
             <tr rsf:id="grade-row">   
                 <th rsf:id="msg=assignment2.grade.details.grade.title">Grade</th>    
-                <td rsf:id="grade"></td>    
+                <td>
+                    <span rsf:id="grade"></span>
+                    <span><a style="display:none" href="#" class="irubric-link"><img src="/sakai-gradebook-tool/images/rubric.gif" alt="iRubric Link" /></a></span>
+                </td>    
             </tr>   
             <tr rsf:id="comment-row">   
                 <th rsf:id="msg=assignment2.grade.details.comments.title">Comments</th>    
@@ -19,4 +22,7 @@
             </tr>   
         </table>    
     </div>    
+    <script type="text/javascript" rsf:id="irubric-grade-details-init">
+      // filled in in producer
+    </script>
 </div>
